GR-61365 Avoid deprecated URL constructor in agent test